--- a/index.html
+++ b/index.html
@@ -1,122 +1,32 @@
-/* Reset Default Margin and Padding */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio Demo</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <p>Building cool things, one line of code at a time.</p>
+    </header>
 
-html, body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+    <section>
+        <h2>About Me</h2>
+        <p>Hello! I'm a passionate developer with a love for creating innovative solutions.</p>
+        <ul>
+            <li>Web Development</li>
+            <li>UI/UX Design</li>
+            <li>Problem Solving</li>
+        </ul>
 
-/* Global Styles */
-body {
-    font-family: 'Poppins', Arial, sans-serif; /* Added fallback font */
-    background-color: #f5f5f5;
-    padding: 20px; /* Adds spacing around the body */
-    display: flex;
-    justify-content: center;
-    align-items: flex-start; /* Aligns content towards the top */
-    flex-wrap: wrap; /* Ensures no overlap on small screens */
-    min-height: 100vh;
-}
+        <h2>Contact</h2>
+        <p>Feel free to <a href="mailto:your-email@example.com">reach out</a>.</p>
 
-/* Main Container */
-section {
-    background-color: white;
-    padding: 2rem;
-    width: 90%;
-    max-width: 800px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    text-align: center;
-    margin-top: 30px;
-}
-
-/* Header */
-header {
-    background-color: #4CAF50;
-    color: white;
-    padding: 2rem;
-    border-radius: 8px;
-    margin-bottom: 1.5rem;
-}
-
-header h1 {
-    font-size: 2rem;
-}
-
-header p {
-    margin: 1rem 0 0;
-}
-
-/* Section Titles */
-h2 {
-    color: #4CAF50;
-    margin-bottom: 1rem;
-}
-
-/* List Items */
-ul {
-    list-style: none;
-}
-
-ul li {
-    background-color: #e7f7e7;
-    margin-bottom: 0.5rem;
-    padding: 0.75rem;
-    border-radius: 5px;
-}
-
-/* Links */
-a {
-    color: #4CAF50;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-a:hover, a:focus {
-    text-decoration: underline; /* Improved accessibility */
-}
-
-/* Definition List */
-dl dt {
-    font-weight: bold;
-    color: #333;
-    margin-top: 1rem;
-}
-
-dl dd {
-    margin-left: 1.5rem;
-    color: #444; /* Improved contrast */
-}
-
-/* Blockquote */
-blockquote {
-    font-style: italic;
-    color: #555;
-    border-left: 4px solid #4CAF50;
-    padding-left: 1rem;
-    margin-top: 2rem;
-}
-
-/* Responsive Design */
-@media (max-width: 600px) {
-    section {
-        padding: 1.5rem;
-    }
-
-    header {
-        padding: 1.5rem;
-    }
-
-    h1 {
-        font-size: 1.5rem; /* Adjust header font size */
-    }
-
-    ul li {
-        font-size: 0.9rem; /* Adjust list font size */
-    }
-}
+        <blockquote>
+            "Code is like humor. When you have to explain it, it’s bad." – Cory House
+        </blockquote>
+    </section>
+</body>
+</html>
