--- a/introduction.html
+++ b/introduction.html
@@ -80,6 +80,7 @@
         <section>
             <h2>2. Problem Definition and Team Details</h2>
             <p><strong>Problem Definition:</strong></p>
+            <p>This system addresses economic inequality by analysing unemployment data, monitoring job availability, and optimizing job distribution. The goal is to reduce unemployment rates and ensure fair job allocation based on skills, location, and industry demands.</p>
             <p>The project focuses on improving the employment rate and ensuring fair job distribution across the city. The system will:</p>
             <ul>
                 <li>Monitor unemployment in various districts.</li>
