--- a/01fe23bcs182.html
+++ b/01fe23bcs182.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algorithm Learning Reflections</title>
+    <title>Reflections: Design and Analysis of Algorithms</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,6 +41,47 @@
 </head>
 <body>
     <div class="container">
+        <h1>Reflections on the Design and Analysis of Algorithms</h1>
+
+        <!-- Course Reflections Section -->
+        <section>
+            <h2>1. What are the kinds of problems we see in nature? (Iteration, Recursion, Backtracking)</h2>
+            <p>Problems in nature can often be modeled using algorithms that exhibit iterative, recursive, or backtracking approaches. Iteration involves repeating a set of operations until a condition is met, recursion involves solving a problem by breaking it down into smaller sub-problems of the same type, and backtracking is used to find solutions by exploring all possibilities and undoing steps when a condition is violated.</p>
+            <p><strong>Example:</strong> The Fibonacci sequence can be calculated through both recursion and iteration, but recursion is more natural when modeling divide-and-conquer problems, while iteration is often more efficient.</p>
+        </section>
+
+        <section>
+            <h2>2. What is space and time efficiency? Why are they important? Explain the different class of problems and orders of growth.</h2>
+            <p>Space efficiency refers to the amount of memory an algorithm uses, and time efficiency refers to the amount of time it takes to complete. These are critical factors in algorithm design, especially when working with large datasets or in resource-constrained environments.</p>
+            <p>Algorithms are classified based on their time and space complexities, using Big O notation to express the order of growth. Common classes of problems include linear (O(n)), logarithmic (O(log n)), quadratic (O(n²)), and exponential (O(2^n)) complexities.</p>
+        </section>
+
+        <section>
+            <h2>3. Take away from different design principles from chapter 2.</h2>
+            <p>Chapter 2 emphasizes important design principles like "divide and conquer," "greedy algorithms," "dynamic programming," and "backtracking." These principles guide the approach to solving complex problems efficiently by breaking them into smaller, more manageable parts or choosing optimal solutions based on local conditions.</p>
+        </section>
+
+        <section>
+            <h2>4. The hierarchical data and how different tree data structures solve and optimize over the problem scenarios.</h2>
+            <p>Hierarchical data can be represented and optimized using various tree data structures. Examples include binary search trees (BST), AVL trees, 2-3 trees, red-black trees, heaps, and tries. Each structure has specific advantages, such as AVL trees ensuring balanced height for quicker lookups, or heaps being optimized for fast insertion and deletion in priority queue applications.</p>
+        </section>
+
+        <section>
+            <h2>5. The need of array query algorithms and their implications. Their applications and principles need to be discussed.</h2>
+            <p>Array query algorithms are essential for efficiently accessing, updating, and processing elements in large arrays. Efficient algorithms allow us to search, sort, or manipulate data quickly. Applications include range queries in databases, searching for patterns in data, and optimizing data access in caches or memory.</p>
+        </section>
+
+        <section>
+            <h2>6. Differentiate between tree and graphs and their traversals. The applications of each.</h2>
+            <p>Trees are hierarchical data structures with a root and a set of child nodes, whereas graphs are non-linear structures with nodes connected by edges. Both have various traversal algorithms: trees use methods like pre-order, in-order, and post-order, while graphs can be traversed using depth-first search (DFS) or breadth-first search (BFS). Applications of trees include file system structures, while graphs are used in networking and social networks.</p>
+        </section>
+
+        <section>
+            <h2>7. Deliberate on sorting and searching algorithms, the technique behind each and how they connect to the real world.</h2>
+            <p>Sorting algorithms like Quick Sort, Merge Sort, and Bubble Sort each have distinct advantages and disadvantages. Quick Sort is typically faster for large datasets, while Merge Sort is stable and efficient for linked lists. Searching algorithms like Binary Search and Linear Search are fundamental for data retrieval, with Binary Search being much faster for sorted data. These algorithms have applications in databases, search engines, and everyday software like e-commerce platforms.</p>
+        </section>
+
+        <!-- Algorithm Learning Reflections Section -->
         <h1>Algorithm Learning Reflections</h1>
 
         <section>
@@ -83,30 +124,6 @@
             <h2>7. Reflect on how breaking down a problem into smaller components can help you approach it more effectively.</h2>
             <p>Breaking a problem into smaller components simplifies implementation and debugging. Techniques like divide-and-conquer leverage this to solve complex problems more efficiently.</p>
             <p><strong>Example</strong>: The smart city project was divided into components like job matching, vacancy management, and economic reporting. This helped in isolating the complex task of job distribution optimization from other aspects of the system.</p>
-        </section>
-
-        <section>
-            <h2>8. Reflect on the trade-offs while choosing between different approaches to solve a problem.</h2>
-            <p>Trade-offs are inevitable when choosing algorithms or data structures. I weigh the trade-offs between time complexity, space complexity, and ease of implementation. The goal is to find a balance that meets the system’s requirements without over-engineering the solution.</p>
-            <p><strong>Example</strong>: For the Economic Inequality Reporting system, I had to choose between BFS (breadth-first search) for quick reporting and Warshall’s algorithm for better accuracy. Ultimately, BFS was chosen for simplicity, as it met our reporting speed requirements.</p>
-        </section>
-
-        <section>
-            <h2>9. How do you identify and address potential limitations or weaknesses in a proposed solution?</h2>
-            <p>I continuously test the solution against different edge cases and performance benchmarks. When limitations arise, I re-evaluate the design and, if necessary, switch to more optimized solutions or redesign parts of the system to improve performance.</p>
-            <p><strong>Example</strong>: When encountering issues with job distribution optimization in certain areas of the city, I revisited the algorithm and adapted it to account for the unique geography, improving its accuracy.</p>
-        </section>
-
-        <section>
-            <h2>10. Reflect on how applying knowledge from one context can help you solve a problem in a different context.</h2>
-            <p>Knowledge from one domain can often be applied to solve problems in another by recognizing similarities. For instance, techniques in optimization used in sorting can be used in job distribution, as both involve finding optimal solutions based on certain constraints.</p>
-            <p><strong>Example</strong>: The concepts of graph algorithms used in routing were applicable when optimizing job distribution paths based on geographic proximity in our project.</p>
-        </section>
-
-        <section>
-            <h2>11. How do you decide when to innovate versus relying on tried-and-tested solutions?</h2>
-            <p>I innovate when existing solutions are not sufficient or if they do not scale well with new requirements. When innovation is unnecessary or would complicate the solution, I rely on tried-and-tested algorithms that are known to work well in similar scenarios.</p>
-            <p><strong>Example</strong>: In the Job Vacancy Database Management system, I used Quick Sort and Merge Sort for efficient data handling, as these are established, effective algorithms for sorting large datasets, rather than attempting to create new sorting methods.</p>
         </section>
 
         <a href="index.html">Back to Home</a>
