--- a/01fe23bcs182.html
+++ b/01fe23bcs182.html
@@ -126,6 +126,30 @@
             <p><strong>Example</strong>: The smart city project was divided into components like job matching, vacancy management, and economic reporting. This helped in isolating the complex task of job distribution optimization from other aspects of the system.</p>
         </section>
 
+        <section>
+            <h2>8. Reflect on the trade-offs while choosing between different approaches to solve a problem.</h2>
+            <p>Trade-offs are inevitable when choosing algorithms or data structures. I weigh the trade-offs between time complexity, space complexity, and ease of implementation. The goal is to find a balance that meets the system’s requirements without over-engineering the solution.</p>
+            <p><strong>Example</strong>: For the Economic Inequality Reporting system, I had to choose between BFS (breadth-first search) for quick reporting and Warshall’s algorithm for better accuracy. Ultimately, BFS was chosen for simplicity, as it met our reporting speed requirements.</p>
+        </section>
+
+        <section>
+            <h2>9. How do you identify and address potential limitations or weaknesses in a proposed solution?</h2>
+            <p>I continuously test the solution against different edge cases and performance benchmarks. When limitations arise, I re-evaluate the design and, if necessary, switch to more optimized solutions or redesign parts of the system to improve performance.</p>
+            <p><strong>Example</strong>: When encountering issues with job distribution optimization in certain areas of the city, I revisited the algorithm and adapted it to account for the unique geography, improving its accuracy.</p>
+        </section>
+
+        <section>
+            <h2>10. Reflect on how applying knowledge from one context can help you solve a problem in a different context.</h2>
+            <p>Knowledge from one domain can often be applied to solve problems in another by recognizing similarities. For instance, techniques in optimization used in sorting can be used in job distribution, as both involve finding optimal solutions based on certain constraints.</p>
+            <p><strong>Example</strong>: The concepts of graph algorithms used in routing were applicable when optimizing job distribution paths based on geographic proximity in our project.</p>
+        </section>
+
+        <section>
+            <h2>11. How do you decide when to innovate versus relying on tried-and-tested solutions?</h2>
+            <p>I innovate when existing solutions are not sufficient or if they do not scale well with new requirements. When innovation is unnecessary or would complicate the solution, I rely on tried-and-tested algorithms that are known to work well in similar scenarios.</p>
+            <p><strong>Example</strong>: In the Job Vacancy Database Management system, I used Quick Sort and Merge Sort for efficient data handling, as these are established, effective algorithms for sorting large datasets, rather than attempting to create new sorting methods.</p>
+        </section>
+
         <a href="index.html">Back to Home</a>
     </div>
 </body>
