--- a/01fe23bcs182.html
+++ b/01fe23bcs182.html
@@ -80,6 +80,21 @@
             <h2>7. Deliberate on sorting and searching algorithms, the technique behind each and how they connect to the real world.</h2>
             <p>Sorting algorithms like Quick Sort, Merge Sort, and Bubble Sort each have distinct advantages and disadvantages. Quick Sort is typically faster for large datasets, while Merge Sort is stable and efficient for linked lists. Searching algorithms like Binary Search and Linear Search are fundamental for data retrieval, with Binary Search being much faster for sorted data. These algorithms have applications in databases, search engines, and everyday software like e-commerce platforms.</p>
         </section>
+         <section>
+            <h2>8. Discuss the importance of graph algorithms with respect to spanning trees and shortest paths.</h2>
+            <p>Graph algorithms play a crucial role in solving real-world problems involving networks, transportation, and logistics. Spanning tree algorithms like Kruskal’s and Prim’s are important for finding the minimum set of edges to connect all vertices in a graph without cycles, which is useful in network design. Shortest path algorithms like Dijkstra’s and Bellman-Ford are essential for finding the quickest route between two points, which has applications in GPS navigation, flight routing, and communication networks.</p>
+        </section>
+
+        <section>
+            <h2>9. Discuss the different studied algorithm design techniques.</h2>
+            <p>Several algorithm design techniques have been studied in this course, each with its own applications and advantages. These include:</p>
+            <ul>
+                <li><strong>Divide and Conquer:</strong> This technique involves breaking a problem into smaller sub-problems, solving each recursively, and combining the results. Examples include Merge Sort and Quick Sort.</li>
+                <li><strong>Greedy Algorithms:</strong> These algorithms build solutions step-by-step, choosing the locally optimal choice at each step, with the hope of finding a globally optimal solution. Examples include the Huffman coding algorithm and Kruskal’s algorithm.</li>
+                <li><strong>Dynamic Programming:</strong> This technique solves problems by breaking them into overlapping subproblems and storing the results of these subproblems to avoid redundant computations. Examples include the Fibonacci sequence and the Knapsack problem.</li>
+                <li><strong>Backtracking:</strong> Used to explore all possible solutions by systematically searching through the space of possible solutions and undoing steps when a condition is violated. Examples include solving the N-Queens problem and finding a path in a maze.</li>
+            </ul>
+        </section>
 
         <!-- Algorithm Learning Reflections Section -->
         <h1>Algorithm Learning Reflections</h1>
