--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         <div>
             <h2 id="meet">Meet My Team 🕵️</h2>
         </div>
+         <div class="team-member">
+                <img src="https://raw.githubusercontent.com/01fe23bcs182/PortfolioDemo.github.io/main/images/Preeti.jpeg" alt="Team Member 2" class="profile-pic">
+                <div class="member-info">
+                    <p class="name">Preeti</p>
+                    <p>USN: 01FE23BCS154</p>
+                    <p>ROLL NO: 423/p>
+                </div>
+            </div>
         <div class="team-container">
             <div class="team-member">
                 <img src="https://raw.githubusercontent.com/01fe23bcs182/PortfolioDemo.github.io/main/images/Priyanka.jpeg" alt="Team Member 1" class="profile-pic">
@@ -78,7 +86,7 @@
     <section>
         <h2 style="color:rgb(34, 34, 211)">🌐 Find Me Online</h2>
         <ul>
-            <li><a href="https://github.com/sahanakp930" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/01fe23bcs182" target="_blank">GitHub</a></li>
             <li><a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
         </ul>
     </section>
