--- a/blocks/home/home.html
+++ b/blocks/home/home.html
@@ -13,14 +13,14 @@
   <nav class="navbar">
     <ul class="nav-list">
       <li><a style="color:rgb(255, 255, 255)"  href="blocks/home/home.html">Home</a></li>
-      <li><a style="color:rgb(255, 255, 255)"  href="/sahana.github.io/index.html">Project Introduction</a></li>
+      <li><a style="color:rgb(255, 255, 255)"  href="/PortfolioDemo.github.io/index.html">Project Introduction</a></li>
       <li><a style="color:rgb(255, 255, 255)"  href="blocks/learningref/teamlearning.html">Learning Reflections</a></li>
     </ul>
   </nav>
 </body>
        <section class="description">
             <div class="link-section">
-                <a class="custom-link" href="/sahana.github.io/Courseintroduction.html">Click Here to see the course introduction</a>
+                <a class="custom-link" href="/PortfolioDemo.github.io/Courseintroduction.html">Click Here to see the course introduction</a>
             </div>
         </section>    
           <div class="topic" style="font-family: serif;" >
