--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <ul class="nav-list">
             <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/blocks/home/home.html">Home</a></li>
-            <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/Courseprojectintroduction.html">Project Introduction</a></li>
+            <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/index.html">Project Introduction</a></li>
             <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
         </ul>
     </nav>
@@ -29,7 +29,7 @@
         </ul>
         <section class="description">
             <div class="link-section">
-                <a class="custom-link" href="/PortfolioDemo.github.io/introduction.html">Click Here to see the course project introduction</a>
+                <a class="custom-link" href="/PortfolioDemo.github.io/Courseprojectintroduction.html">Click Here to see the course project introduction</a>
             </div>
         </section>
         <section class="description">
