--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <ul class="nav-list">
             <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/blocks/home/home.html">Home</a></li>
-            <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/index.html">Project Introduction</a></li>
+            <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/Courseprojectintroduction.html">Project Introduction</a></li>
             <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
         </ul>
     </nav>
