--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <ul class="nav-list">
             <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/blocks/home/home.html">Home</a></li>
-            <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/Courseprojectintroduction.html">Project Introduction</a></li>
+            <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/introduction.html">Project Introduction</a></li>
             <li><a style="color:rgb(255, 255, 255)" href="/PortfolioDemo.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
         </ul>
     </nav>
@@ -29,7 +29,7 @@
         </ul>
         <section class="description">
             <div class="link-section">
-                <a class="custom-link" href="/PortfolioDemo.github.io/Courseprojectintroduction.html">Click Here to see the course project introduction</a>
+                <a class="custom-link" href="/PortfolioDemo.github.io/introduction.html">Click Here to see the course project introduction</a>
             </div>
         </section>
         <section class="description">
@@ -45,17 +45,18 @@
         <div>
             <h2 id="meet">Meet My Team 🕵️</h2>
         </div>
-         <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs182/PortfolioDemo.github.io/main/images/Preeti.jpeg" alt="Team Member 2" class="profile-pic">
+        <div class="team-container">
+            <div class="team-member">
+                <img src="https://raw.githubusercontent.com/01fe23bcs182/PortfolioDemo.github.io/main/images/Pooja.jpeg" alt="Team Member 1" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Preeti</p>
                     <p>USN: 01FE23BCS154</p>
-                    <p>ROLL NO: 423/p>
+                    <p>ROLL NO: 423</p>
                 </div>
             </div>
-        <div class="team-container">
+
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs182/PortfolioDemo.github.io/main/images/Priyanka.jpeg" alt="Team Member 1" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/sahanakp930/sahana.github.io/main/images/Sahana.jpeg" alt="Team Member 2" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Priyanka Badiger</p>
                     <p>USN: 01FE23BCS182</p>
@@ -64,7 +65,7 @@
             </div>
 
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs182/PortfolioDemo.github.io/main/images/Shreya.jpeg" alt="Team Member 2" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/sahanakp930/sahana.github.io/main/images/Vaishali.jpeg" alt="Team Member 3" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Shreya Hadikar</p>
                     <p>USN: 01FE23BCS186</p>
@@ -72,8 +73,8 @@
                 </div>
             </div>
 
-            <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs182/PortfolioDemo.github.io/main/images/Aishwarya.jpeg" alt="Team Member 3" class="profile-pic">
+              <div class="team-member">
+                <img src="https://raw.githubusercontent.com/sahanakp930/sahana.github.io/main/images/Vaishali.jpeg" alt="Team Member 3" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Aishwarya Talikoti</p>
                     <p>USN: 01FE23BCS189</p>
