--- a/blocks/learningref/teamlearning.html
+++ b/blocks/learningref/teamlearning.html
@@ -23,20 +23,22 @@
         <h1><strong>Learning Reflections</strong> by each team member:</h1>
         <section>
             <h2>01fe23bcs182</h2>
-            <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/01fe23bcs182.html">">Click here to see learning outcomes</a>
+            <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/01fe23bcs182.html">Click here to see learning outcomes</a>
         </section>
         <section>
             <h2>01fe23bcs186</h2>
-           <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/01fe23bcs186.html">Click here to see learning outcomes</a>
+            <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/01fe23bcs186.html">Click here to see learning outcomes</a>
         </section>
         <section>
             <h2>01fe23bcs189</h2>
             <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/01fe23bcs189.html">Click here to see learning outcomes</a>
         </section>
-       <h2>01fe23bcs154</h2>
+        <section>
+            <h2>01fe23bcs154</h2>
             <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/01fe23bcs154.html">Click here to see learning outcomes</a>
         </section>
     </main>
 </body>
 
 </html>
+
