--- a/blocks/learningref/teamlearning.html
+++ b/blocks/learningref/teamlearning.html
@@ -22,20 +22,20 @@
     <main>
         <h1><strong>Learning Reflections</strong> by each team member:</h1>
         <section>
-            <h2>01fe23bcs182</h2>
+            <h2>Preeti (423)</h2>
+            <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/Preeti154.html">Click here to see learning outcomes</a>
+        </section>
+        <section>
+            <h2>Priyanka (425)</h2>
             <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/Priyanka182.html">Click here to see learning outcomes</a>
         </section>
         <section>
-            <h2>01fe23bcs186</h2>
+            <h2>Shreya (427)</h2>
             <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/Shreya186.html">Click here to see learning outcomes</a>
         </section>
         <section>
-            <h2>01fe23bcs189</h2>
+            <h2>Aishwarya (429)</h2>
             <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/Aishwrya189.html">Click here to see learning outcomes</a>
-        </section>
-        <section>
-            <h2>01fe23bcs154</h2>
-            <a class="members" href="/PortfolioDemo.github.io/blocks/learningref/Preeti154.html">Click here to see learning outcomes</a>
         </section>
     </main>
 </body>
