--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             </div>
         </section>
 
+         <section class="description">
+            <div class="link-section">
+                <a class="custom-link" href="/PortfolioDemo.github.io/Reflections/our_reflections.html">Click Here to see Reflections</a>
+            </div>
+        </section>
         <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
     </section>
 
