--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs182/PortfolioDemo.github.io/main/images/Priyanka.jpeg" alt="Team Member 2" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/01fe23bcs182/PortfolioDemo.github.io/main/images/images/WhatsApp Image 2024-10-04 at 4.43.21 PM.jpeg" alt="Team Member 2" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Priyanka Badiger</p>
                     <p>USN: 01FE23BCS182</p>
